--- a/src/app/pages/auth/components/registration/registration.component.html
+++ b/src/app/pages/auth/components/registration/registration.component.html
@@ -1,12 +1,17 @@
 <div class="flex flex-col justify-center items-center h-screen">
-  <h2 class="mb-4 font-bold text-2xl">Sign Up</h2>
+  <h2 class="mb-4 font-bold text-2xl">
+    Sign Up
+  </h2>
 
   <form class="flex flex-col justify-center w-96"
         [formGroup]="registrationForm"
         (ngSubmit)="register()">
+
     <div class="mb-4">
       <label for="name"
-             class="block mb-2 font-bold text-gray-700 text-sm">Name</label>
+             class="block mb-2 font-bold text-gray-700 text-sm">
+        Name
+      </label>
       <input type="text"
              id="name"
              name="name"
@@ -14,9 +19,12 @@
              class="border-gray-300 focus:border-indigo-500 px-3 py-2 border rounded-md w-full focus:outline-none"
              placeholder="Enter your name">
     </div>
+
     <div class="mb-4">
       <label for="email"
-             class="block mb-2 font-bold text-gray-700 text-sm">Email</label>
+             class="block mb-2 font-bold text-gray-700 text-sm">
+        Email
+      </label>
       <input type="email"
              id="email"
              name="email"
@@ -24,9 +32,12 @@
              class="border-gray-300 focus:border-indigo-500 px-3 py-2 border rounded-md w-full focus:outline-none"
              placeholder="Enter your email">
     </div>
+
     <div class="mb-4">
       <label for="password"
-             class="block mb-2 font-bold text-gray-700 text-sm">Password</label>
+             class="block mb-2 font-bold text-gray-700 text-sm">
+        Password
+      </label>
       <input type="password"
              id="password"
              name="password"
@@ -34,6 +45,20 @@
              class="border-gray-300 focus:border-indigo-500 px-3 py-2 border rounded-md w-full focus:outline-none"
              placeholder="Enter your password">
     </div>
+
+    <div class="mb-4">
+      <label for="password"
+             class="block mb-2 font-bold text-gray-700 text-sm">
+        Confirm Password
+      </label>
+      <input type="password"
+             id="password"
+             name="password"
+             formControlName="password_confirmation"
+             class="border-gray-300 focus:border-indigo-500 px-3 py-2 border rounded-md w-full focus:outline-none"
+             placeholder="Confirm your password">
+    </div>
+
     <button type="submit"
             [disabled]="registrationForm.invalid"
             class="bg-blue-500 hover:bg-blue-600 disabled:bg-blue-300 px-4 py-2 rounded font-bold text-white">
